--- a/package.json
+++ b/package.json
@@ -1,23 +1,31 @@
 {
-  "name": "cakebase",
-  "version": "1.0.0",
-  "description": "A light JSON database for node, powerful.",
-  "keywords": [
-    "local",
-    "database",
-    "JSON",
-    "storage",
-    "localStorage",
-    "Node"
-  ],
-  "main": "index.js",
-  "dependencies": {},
-  "devDependencies": {
-    "nodemon": "^2.0.2"
-  },
-  "scripts": {
-    "test": "nodemon ./.test/test.js"
-  },
-  "author": "",
-  "license": "MIT"
+	"name": "cakebase",
+	"version": "1.0.0",
+	"description": "A light JSON database for node, powerful.",
+	"keywords": [
+		"local",
+		"database",
+		"JSON",
+		"storage",
+		"localStorage",
+		"Node"
+	],
+	"main": "index.js",
+	"dependencies": {},
+	"devDependencies": {
+		"nodemon": "^2.0.2"
+	},
+	"scripts": {
+		"test": "nodemon ./.test/test.js"
+	},
+	"author": "Erwin Kulasic",
+	"homepage": "https://github.com/erwinkulasic/Cakebase",
+	"repository": {
+		"type": "git",
+		"url": "git://github.com/erwinkulasic/Cakebase.git"
+	  },
+	"license": "MIT",
+	"engines": {
+		"node": ">=6"
+	}
 }
