--- a/package.json
+++ b/package.json
@@ -30,5 +30,6 @@
 	"engines": {
 		"node": ">=6"
 	},
-	"private": false
+	"private": false,
+	"publishConfig": { "registry": "https://npm.pkg.github.com/" }
 }
