--- a/package.json
+++ b/package.json
@@ -1,15 +1,23 @@
 {
 	"name": "cakebase",
-	"version": "1.0.5",
+	"version": "1.0.6",
 	"description": "Cakebase is a lightweight json database for node, powerful.",
 	"keywords": [
 		"local",
 		"database",
 		"JSON",
+		"json",
 		"storage",
 		"localStorage",
 		"node",
-		"nodejs"
+		"nodejs",
+		"light-json-database",
+		"leightweight-json-database",
+		"file",
+		"nosql",
+		"nosql-data-storage",
+		"nosql-database",
+		"json-database"
 	],
 	"main": "index.js",
 	"dependencies": {},
@@ -24,7 +32,7 @@
 	"bugs": {
 		"url": "https://github.com/erwinkulasic/Cakebase/issues"
 	},
-	"homepage": "https://github.com/erwinkulasic/Cakebase",
+	"homepage": "https://github.com/erwinkulasic/Cakebase/blob/master/README.md",
 	"repository": "git://github.com/erwinkulasic/Cakebase.git",
 	"license": "MIT",
 	"engines": {
