--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "cakebase",
-	"version": "1.0.6",
+	"version": "1.0.7",
 	"description": "Cakebase is a lightweight json database for node, powerful.",
 	"keywords": [
 		"local",
@@ -25,8 +25,7 @@
 		"nodemon": "^2.0.4"
 	},
 	"scripts": {
-		"run:test": "nodemon ./.test/test.js",
-		"start": "node ."
+		"test": "nodemon ./.test/test.js"
 	},
 	"author": "Erwin Kulasic",
 	"bugs": {
