--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
 	"main": "index.js",
 	"dependencies": {},
 	"devDependencies": {
-		"nodemon": "^2.0.4"
+		"nodemon": "^2.0.4",
+		"typescript": "^4.1.2"
 	},
 	"scripts": {
 		"test2": "node ./.test/test.js",
@@ -39,5 +40,6 @@
 	"engines": {
 		"node": ">=6"
 	},
-	"private": false
+	"private": false,
+	"types": "./@types/cakebase/index.d.ts"
 }
