--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "cakebase",
-	"version": "2.0.0",
-	"description": "Cakebase is a lightweight json database for node, powerful.",
+	"version": "3.0.1",
+	"description": "Cakebase is a lightweight json database for nodejs.",
 	"keywords": [
 		"local",
 		"database",
@@ -22,16 +22,13 @@
 	"main": "index.js",
 	"dependencies": {},
 	"devDependencies": {
-		"nodemon": "^2.0.4",
-		"typescript": "^4.3.5"
+		"@types/node": "^16.11.11"
 	},
 	"scripts": {
-		"test2": "node ./.test/test.js",
-		"test": "nodemon ./.test/test.js",
-		"start": "node .",
-		"build:types": "tsc -d"
+		"test": "node ./.test/test.js",
+		"start": "node ."
 	},
-	"author": "Erwin Kulasic",
+	"author": "erwinkulasic",
 	"bugs": {
 		"url": "https://github.com/erwinkulasic/Cakebase/issues"
 	},
@@ -42,5 +39,5 @@
 		"node": ">=6"
 	},
 	"private": false,
-	"types": "./@types/cakebase/index.d.ts"
+	"types": "./index.d.ts"
 }
