--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,6 @@ language: node_js
 node_js:
     - node
 install:
-    - npm install
+    - npm install --save-dev
 script:
-    - npm run travis.test
+    - npm test
