--- a/package.json
+++ b/package.json
@@ -1,27 +1,18 @@
 {
 	"name": "cakebase",
-	"version": "4.0.2",
-	"description": "Cakebase is a asynchronos fast lightweight json database for nodejs.",
+	"version": "4.1.0",
+	"description": "Cakebase is an asynchronous json database for nodejs.",
 	"keywords": [
 		"local",
 		"database",
-		"JSON",
 		"json",
-		"storage",
-		"localStorage",
 		"node",
-		"nodejs",
-		"light-json-database",
-		"leightweight-json-database",
 		"file",
-		"nosql",
-		"nosql-data-storage",
-		"nosql-database",
-		"json-database"
+		"nosql"
 	],
 	"main": "./src/index.js",
 	"scripts": {
-		"travis.test": "node ./.travis/prod.test.js"
+		"test": "mocha"
 	},
 	"author": "erwinkulasic",
 	"bugs": {
@@ -34,5 +25,8 @@
 		"node": ">=6"
 	},
 	"private": false,
-	"types": "./src/types/index.d.ts"
+	"types": "./src/index.d.ts",
+	"devDependencies": {
+		"mocha": "^10.1.0"
+	}
 }
